# sik2022-zadanie2

./: CMakeLists.txt  client.cpp  robots-client.cpp
